--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "packageManager": "pnpm@8.15.5+sha1.a58c038faac410c947dbdb93eb30994037d0fce2",
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.2",
+    "pug": "^3.0.3",
     "shadcn-nuxt": "^1.0.3"
   }
 }
