--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.2",
     "@unhead/vue": "^2.0.0-rc.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.0.0",
+    "lucide-vue-next": "^0.483.0",
     "nuxt": "^3.16.0",
+    "reka-ui": "^2.1.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
