--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.2",
     "@unhead/vue": "^2.0.0-rc.8",
+    "@vueuse/core": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint": "^9.0.0",
