--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.5.2",
     "eslint": "^9.0.0",
     "lucide-vue-next": "^0.483.0",
     "nuxt": "^3.16.0",
