--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "tar -zcvf deploy.tar .output Dockerfile && caprover deploy -n alialaca -a servis -t deploy.tar && rm deploy.tar"
   },
   "dependencies": {
     "@nuxt/eslint": "1.2.0",
